2000-09-15  lav

	* edit.cc: call LoadMainMenu.
	* keymap.cc, keymap.h, keymapdf.cc, keymapfn.cc: lots of new functions;
	  pretty keys support.
	* menu1.cc, menu1.h: loadable menu support.
	* mainmenu.cc: adapt for new menu1.h

2000-09-04  lav

	* edit.cc, loadsave.cc: support DISABLE_FILE_LOCKS
	* screen.cc: use TextPoint in display process (minor speed-up).
	* textpoin.cc, textpoin.h: speed-up TextPoint cache.

2000-03-24  lav

	* block.cc, edit.cc, edit.h, ext.cc, format.cc, frames.cc, kern.cc,
	  keymapdf.cc, keymapfn.cc, loadsave.cc, mainmenu.cc, options.cc,
	  screen.cc, screen.h, search.cc, user.cc, user.h: add MessageSync
	  function; use it; don't call refresh from Message; move Optimize
	  to user.cc and rename it to UserOptimizeText; Redisplay now checks
	  if a message is on screen; TestPosition shifts screen left when
	  cursor is closer to left side than hscroll.

2000-03-21  lav

	* kern.cc: (ToLineEnd) set flag when spaces are truncated in test mode.

2000-03-16  lav

	* search.cc, screen.cc: move screen shifting because of status line
	  to TestPosition.
	* edit.cc: don't ask for save if read-only.
	* keymap.cc: leave more space for func name.

2000-02-28  lav

	* keymap.cc: break loop on EOF.

2000-02-18  lav

	* highli.cc, highli.h, search.cc: fix few memory alloc/free problems
	  with regex usage; handle errors from re_search_2.

2000-02-17  lav

	* edit.cc, edit.h, highli.cc, highli.h, keymapfn.cc, mainmenu.cc,
	  search.cc, search.h: don't include search.h in edit.h;
	  support ignore case option in highlightling patterns.

2000-02-12  lav

	* screen.cc: don't forget to set flag when ScreenTop changes.

2000-02-11  lav

	* user.cc: (UserMarkMove*) handle LineEnd in text mode properly.

2000-02-05  lav

	* loadsave.cc: cast MAP_FAILED (for osf/1)

2000-01-21  lav

	* edit.h: define bool even if LE_CURSES_BOOL is undefined.
	* getstr.cc, screen.cc: cast off const for addstr.
	* keymap.cc: include term.h.