@@ -109,6 +109,7 @@ ActionProcRec  EditorActionProcTable[]=
    {BLOCK_FUNC_BAR,BlockFunc},
    {MARK_LINE,UserMarkLine},
    {MARK_TO_EOL,UserMarkToEol},
+   {MARK_ALL,UserMarkAll},
    {START_DRAG_MARK,UserStartDragMark},
    {YANK_BLOCK,UserYankBlock},
 
